--- a/medid.html
+++ b/medid.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Med Id</title>
-    <link rel="stylesheet" href="./medweb.css">
+    <link rel="stylesheet" href="./medid.css">
 </head>
 <header>
     <div>
