--- a/medid.html
+++ b/medid.html
@@ -8,7 +8,7 @@
 </head>
 <header>
     <div>
-        <h1>Medical Identifacation</h1>
+        <h1>Medical Identification</h1>
     </div>
     <nav>
         <ul>
@@ -40,7 +40,7 @@
                                 <input type="text" id="pname" name="pname">
                             </li>
                             <li>
-                                <label for="pnoun">Pro Noun's: </label>
+                                <label for="pnoun">ProNoun's: </label>
                                 <input type="text" id="pnoun" name="pnoun">
                             </li>
                             </div>
@@ -72,7 +72,8 @@
                                     </select>
                                 </li>
                                 <li>
-                                <label for="cperson">Emergancy Contact: </label>
+                                <label for="cperson">Emergency Contact: </label>
+                                <input type="text" id="cperson" name="cperson">
                                 <input type="text" id="cperson" name="cperson">
                                 </li>
                                 <li>
