--- a/medid.html
+++ b/medid.html
@@ -76,7 +76,7 @@
                                 <input type="text" id="cperson" name="cperson">
                                 </li>
                                 <li>
-                                <input type="text" id="nok" name="nok">
+                                <input type="text" id="cperson" name="cperson">
                                 </li>
                             
                         </ul>
