--- a/medid.html
+++ b/medid.html
@@ -40,7 +40,7 @@
                                 <input type="text" id="pname" name="pname">
                             </li>
                             <li>
-                                <label for="pnoun">ProNoun's: </label>
+                                <label for="pnoun">Pronoun's: </label>
                                 <input type="text" id="pnoun" name="pnoun">
                             </li>
                             </div>
@@ -72,10 +72,11 @@
                                     </select>
                                 </li>
                                 <li>
-                                <label for="cperson">Emergency Contact: </label>
+                                <label for="cperson">Emergency Contact Name: </label>
                                 <input type="text" id="cperson" name="cperson">
                                 </li>
                                 <li>
+                                <label for="cperson">Emergencey Contact Number:</label>
                                 <input type="text" id="cperson" name="cperson">
                                 </li>
                             
@@ -108,13 +109,24 @@
                         </li>
                         <li class="alist">
                             <label for="">5:</label>
-                            <input type="text"></li>
+                            <input type="text">
+                        </li>
                         <li class="alist">
                             <label for="">6:</label>
                             <input type="text">
                         </li>
                         <div>
-                        <li class="blist">
+                            <div>
+                                <li class="other-details">
+                                <label for="">Please fill in any other details:</label>
+                                </li>
+                            </div>
+                        <li>
+                        <textarea name="odetails" id="odetails" cols="100%" rows="10">
+                        </textarea>
+                        </li>
+                        
+                        <!--<li class="blist">
                             <label for="">7:</label>
                             <input type="text">
                         </li>
@@ -136,7 +148,7 @@
                         <li class="blist">
                             <label for="">12:</label>
                             <input type="text">
-                        </li>
+                        </li>-->
                         </div>
                     </ul>
                 </form>
@@ -171,7 +183,16 @@
                                 <input type="text">
                             </li>
                         <div>
-                            <li class="mblist">
+                            <div>
+                                <li class="other-details">
+                                <label for="">Please fill in any other details:</label>
+                                </li>
+                            </div>
+                                <li>
+                                <textarea name="odetails" id="odetails" cols="100%" rows="10">
+                                </textarea>
+                                </li>
+                            <!--<li class="mblist">
                                 <label for="">7:</label>
                                 <input type="text">
                             </li>
@@ -194,7 +215,7 @@
                             <li class="mblist">
                                 <label for="">12:</label>
                                 <input type="text">
-                            </li>
+                            </li>-->
                         </div>
                     </ul>
                 </form>
@@ -231,7 +252,16 @@
                                 </li>
                             </div>
                             <div>
-                                <li class="dblist">
+                                <div>
+                                    <li class="other-details">
+                                    <label for="">Please fill in any other details:</label>
+                                    </li>
+                                </div>
+                                    <li>
+                                    <textarea name="odetails" id="odetails" cols="100%" rows="10">
+                                    </textarea>
+                                    </li>
+                                <!--<li class="dblist">
                                     <label for="">7:</label>
                                     <input type="text">
                                 </li>
@@ -254,7 +284,7 @@
                                 <li class="dblist">
                                     <label for="">12:</label>
                                     <input type="text">
-                                </li>
+                                </li>-->
                             </div>
                         </ul>
                 </form>
