--- a/medid.html
+++ b/medid.html
@@ -12,10 +12,11 @@
     </div>
     <nav>
         <ul>
-            <li><a href="#details">Details</a></li>
-            <li><a href="#allergies">Allergies</a></li>
-            <li><a href="#medications">Medications</a></li>
-            <li><a href="#disabilities">Disabilities</a></li>
+            <li><button class="pushable"><span class="front">Log In</span></button></li>
+            <li><a class="pushable" href="#details"><span class="front">Details</span>
+            <li><a class="pushable" href="#allergies"><span class="front">Allergies</span>
+            <li><a class="pushable" href="#medications"><span class="front">Medications</span>
+            <li><a class="pushable" href="#disabilities"><span class="front">Disabilities</span>
         </ul>
     </nav>
 </header>
