fixed button push

--- a/medid.html
+++ b/medid.html
@@ -13,10 +13,10 @@
     <nav>
         <ul>
             <li><button class="pushable"><span class="front">Log In</span></button></li>
-            <li><a class="pushable" href="#details"><span class="front">Details</span>
-            <li><a class="pushable" href="#allergies"><span class="front">Allergies</span>
-            <li><a class="pushable" href="#medications"><span class="front">Medications</span>
-            <li><a class="pushable" href="#disabilities"><span class="front">Disabilities</span>
+            <li class="pushable"><a href="#details"><span class="front">Details</span>
+            <li class="pushable"><a href="#allergies"><span class="front">Allergies</span>
+            <li class="pushable"><a href="#medications"><span class="front">Medications</span>
+            <li class="pushable"><a href="#disabilities"><span class="front">Disabilities</span>
         </ul>
     </nav>
 </header>
