--- a/medid.html
+++ b/medid.html
@@ -11,13 +11,15 @@
         <h1>Medical Identification</h1>
     </div>
     <nav>
-        <ul>
-            <li><button class="pushable"><span class="front">Log In</span></button></li>
-            <li class="pushable"><a href="#details"><span class="front">Details</span>
-            <li class="pushable"><a href="#allergies"><span class="front">Allergies</span>
-            <li class="pushable"><a href="#medications"><span class="front">Medications</span>
-            <li class="pushable"><a href="#disabilities"><span class="front">Disabilities</span>
-        </ul>
+        <div>
+            <ul>
+                <li><button class="pushable"><span class="front">Log In</span></button></li>
+                <li class="pushable"><a href="#details"><span class="front">Details</span></a></li>
+                <li class="pushable"><a href="#allergies"><span class="front">Allergies</span></a></li>
+                <li class="pushable"><a href="#medications"><span class="front">Medications</span></a></li>
+                <li class="pushable"><a href="#disabilities"><span class="front">Disabilities</span></a></li>
+            </ul>
+        </div>
     </nav>
 </header>
 <body>
