--- a/medid.html
+++ b/medid.html
@@ -293,6 +293,11 @@
                 </form>
             </div>
         </div>
+        <div>
+            <footer>
+                <h3>Developed by The DARKN Group</h3>
+            </footer>
+        </div>
     </div>            
 </body>
 </html>
