--- a/medid.html
+++ b/medid.html
@@ -79,7 +79,7 @@
                                 <input type="text" id="cperson" name="cperson">
                                 </li>
                                 <li>
-                                <label for="cperson">Emergencey Contact Number:</label>
+                                <label for="cperson">Emergency Contact Number:</label>
                                 <input type="text" id="cperson" name="cperson">
                                 </li>
                             
