--- a/medid.html
+++ b/medid.html
@@ -39,7 +39,7 @@
                                 <input type="text" id="lname" name="lname">
                             </li>
                             <li>
-                                <label for="pname">Prefered Name: </label>
+                                <label for="pname">Preferred Name: </label>
                                 <input type="text" id="pname" name="pname">
                             </li>
                             <li>
