--- a/medid.html
+++ b/medid.html
@@ -86,6 +86,11 @@ li {
 .toggle-content {
     display: none;
 }
+@media only screen and (max-width: 480px) {
+    button {
+        margin: auto;
+    }
+}
 </style>
 </head>
 <header>
