--- a/medid.html
+++ b/medid.html
@@ -88,7 +88,7 @@ li {
 }
 @media only screen and (max-width: 480px) {
     button {
-        margin: auto;
+        margin: 10px;
     }
 }
 </style>
